dataset1235/2025-2/610742602/users/2447224811/executions/906907063_291286518.log
== SUBMISSION (2025-08-19 21:50:09)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(Digite o numero"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(Digite o numero"))
                             ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(Digite o numero"))
                             ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(Digite o numero"))
                             ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(Digite o numero"))
                             ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(Digite o numero"))
                             ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:50:50)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:51:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:50:38)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input (Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input (Digite o numero:"))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input (Digite o numero:"))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input (Digite o numero:"))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input (Digite o numero:"))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input (Digite o numero:"))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:51:06)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:50:59)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:51:01)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:50:49)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:51:34)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:51:34)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:51:33)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:50:58)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero:"))
                                    ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:51:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:51:18)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:50:37)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input (Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input (Digite o numero:"))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input (Digite o numero:"))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input (Digite o numero:"))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input (Digite o numero:"))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input (Digite o numero:"))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:51:16)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:51:13)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(Digite o numero: "))
                                     ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
